[project]
name = "comfyui-lmstudio-image-to-text-node"
description = ""
version = "1.1.6"
license = "LICENSE"
dependencies = ["lmstudio>=1.2.0"]

[project.urls]
Repository = "https://github.com/mattjohnpowell/comfyui-lmstudio-image-to-text-node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "expo"
DisplayName = "comfyui-lmstudio-image-to-text-node"
Icon = "https://uuhwiahvfvrzsenphewc.supabase.co/storage/v1/object/public/phormulate-media-bucket/lmstudio-comfyui.png"

